--- a/RegisterWindow.xaml
+++ b/RegisterWindow.xaml
@@ -1,8 +1,9 @@
-﻿<Window x:Class="GreeeenThumb.RegisterWindow"
+﻿<Window x:Class="greenthumb.RegisterWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Register" Height="300" Width="400">
     <Window.Resources>
+        <!-- Style for TextBox -->
         <Style x:Key="PlaceholderTextBoxStyle" TargetType="TextBox">
             <Setter Property="Template">
                 <Setter.Value>
@@ -26,12 +27,38 @@
                 </Setter.Value>
             </Setter>
         </Style>
+
+        <!-- Style for PasswordBox -->
+        <Style x:Key="PlaceholderPasswordBoxStyle" TargetType="PasswordBox">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="PasswordBox">
+                        <Grid>
+                            <PasswordBox x:Name="PART_PasswordBox" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" />
+                            <TextBlock x:Name="PART_Placeholder" Text="{TemplateBinding Tag}" Foreground="Gray" Visibility="Collapsed"/>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger SourceName="PART_PasswordBox" Property="Password" Value="">
+                                <Setter TargetName="PART_Placeholder" Property="Visibility" Value="Visible"/>
+                            </Trigger>
+                            <Trigger SourceName="PART_PasswordBox" Property="Password" Value="{x:Null}">
+                                <Setter TargetName="PART_Placeholder" Property="Visibility" Value="Visible"/>
+                            </Trigger>
+                            <Trigger SourceName="PART_PasswordBox" Property="IsFocused" Value="True">
+                                <Setter TargetName="PART_Placeholder" Property="Visibility" Value="Collapsed"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Window.Resources>
+
     <Grid>
         <Label Content="Registrera Ny Användare" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,30,0,0"/>
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
             <TextBox x:Name="UsernameTextBox" Style="{StaticResource PlaceholderTextBoxStyle}" Tag="Användarnamn" Width="200" Margin="0,10"/>
-            <PasswordBox x:Name="PasswordBox" Style="{StaticResource PlaceholderTextBoxStyle}" Tag="Lösenord" Width="200" Margin="0,10"/>
+            <PasswordBox x:Name="PasswordBox" Style="{StaticResource PlaceholderPasswordBoxStyle}" Tag="Lösenord" Width="200" Margin="0,10"/>
             <ComboBox x:Name="CountryComboBox" Tag="Välj Land" Width="200" Margin="0,10"/>
             <Button Content="Register" Width="80" Height="30" Margin="0,10" Click="RegisterButton_Click"/>
         </StackPanel>
